# shazam-cli

./: CLAUDE.md  Cargo.toml  README.md
shazam-lib/: Cargo.toml
shazam-lib/src/: lib.rs  response.rs
src/: main.rs
