[package]
name = "shazam-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
shazam-lib = { path = "shazam-lib" }

clap = { version = "4.6.1", features = ["derive", "env"] }
miette = { workspace = true, features = ["fancy"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true

[workspace]
members = ["shazam-lib"]

[workspace.dependencies]
miette = "7.6.0"

[workspace.lints.rust]
anonymous_parameters = "deny"
elided_lifetimes_in_paths = "deny"
ellipsis_inclusive_range_patterns = "deny"
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
trivial_numeric_casts = "deny"
unsafe_code = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "allow"
variant_size_differences = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
allow_attributes = "deny"
# allow_attributes_without_reason = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
default_trait_access = "deny"
empty_enums = "deny"
enum_glob_use = "deny"
expl_impl_clone_on_copy = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
if_not_else = "deny"
ignored_unit_patterns = "deny"
invalid_upcast_comparisons = "deny"
items_after_statements = "deny"
large_digit_groups = "deny"
manual_filter_map = "deny"
map_flatten = "deny"
map_unwrap_or = "deny"
match_same_arms = "deny"
missing_const_for_fn = "deny"
mut_mut = "deny"
needless_continue = "deny"
needless_pass_by_value = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"
string_add_assign = "deny"
type_repetition_in_bounds = "deny"
uninlined_format_args = "deny"
unreadable_literal = "deny"
unseparated_literal_suffix = "deny"
unused_self = "deny"
# Sometimes gives false positives; feel free to disable per-crate.
use_self = "deny"
used_underscore_binding = "deny"
wildcard_imports = "deny"

enum_variant_names = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
struct_field_names = "warn"
suboptimal_flops = "warn"

future_not_send = "allow"
redundant_pub_crate = "allow"

pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
