[package]
name = "shazam-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
ffmpeg-next = "8.1.0"
miette = { workspace = true }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "query"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.18"
tracing = { workspace = true }

[dev-dependencies]
float-cmp = "0.10.0"

[lints]
workspace = true
